<resources>
    <string name="app_name">PM2.5在线监测系统</string>

    <!--监测指标单位-->
    <string name="unit">ug/m³</string>
    <!--温度单位-->
    <string name="tmp_unit">℃</string>
    <string name="hum_unit">%</string>
    <string name="no_data">~</string>
    <string name="colon">:</string>

    <string name="front_title">首页</string>
    <string name="list_title">排行榜</string>
    <string name="map_title">地图</string>
    <string name="community_title">发布社区</string>
    <string name="setting_title">设置</string>
    <string name="else_menu">其他</string>


    <string name="drawer_open">OpenDrawer</string>
    <string name="drawer_close">CloseDrawer</string>

    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_about">关于</string>
    <string name="action_edit">修改</string>
    <string name="action_done">完成</string>
    
    <string name="user_edit_name">用户名</string>
    <string name="user_edit_password">修改密码</string>
    <string name="user_edit_password_former">请输入原密码</string>
    <string name="user_edit_password_new">请输入新密码</string>
    <string name="user_edit_password_renew">请再次输入新密码</string>
    <string name="user_edit_email">修改邮箱</string>
    <string name="user_edit_email_new">请输入新邮箱</string>
    <string name="user_edit_alarm">修改警戒值</string>
    <string name="user_edit_alarm_new">请输入新警戒值</string>

    <string name="search_hint">输入节点名..</string>
    <string name="my_post">我的发布</string>
    <string name="my_edit">编辑个人信息</string>

    <string name="front_hint">你还没有关注节点</string>
    <string name="search_noNode_hint">节点未找到..</string>

    <string name="rank_name">排名</string>
    <string name="city_name">地区</string>
    <string name="aqi_name">AQI</string>
    <string name="pm10_name">pm10</string>
    <string name="pm25_name">pm2.5</string>

    <string name="pm25_comm">pm2.5:</string>
    <string name="pm10_comm">pm1 0:</string>

    <string name="hint_where">输入城市名</string>
    <string name="chart_title">PM2.5、PM10折线图</string>
</resources>
