<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="80"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="90"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_about"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>