<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_perm_identity_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/user_edit_name"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/user_edit_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/no_data"
                        android:textColor="#333"
                        android:textSize="22sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_text_fields_24dp" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/user_edit_password"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_edit_password_former"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_edit_password_former"
                        android:inputType="textPassword"
                        android:padding="7dp" />

                    <EditText
                        android:id="@+id/user_edit_password_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_edit_password_new"
                        android:inputType="textPassword"
                        android:padding="7dp" />

                    <EditText
                        android:id="@+id/user_edit_password_renew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_edit_password_renew"
                        android:inputType="textPassword"
                        android:padding="7dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_email_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/user_edit_email"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_edit_email"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_edit_email_new"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="470dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_warning_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/user_edit_alarm"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_edit_alarm"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_edit_alarm_new"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>